[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["schema"]

[dependencies]
schema = {path = "schema"}

clap = {version = "^4.4", features = ["derive"]}
indoc = {version = "^2.0"}
ahash = {version = "^0.8"}
num = {version = "^0.4"}
